--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@ button {
   border-radius: 0px 0px 0px 0px !important;
   font-size: 16px;
   color: #FFFFFF;
-  background-color: #0D5AC0;
+  background-color: #0B6258;
   margin: 0 0 0px;
   display: inline-block;
   padding: 0;
@@ -1026,7 +1026,7 @@ ul.check-lists.check-list12 .list-item .list-text {
   opacity: 0.9;
 }
 .rs-contact-box.contact-box1 .address-item .address-icon i {
-  color: #3a15fb !important;
+  color: #0B6258 !important;
 }
 .stylelisting {
   list-style-type: none;
@@ -1461,7 +1461,7 @@ blockquote:before {
   border-radius: 50px 50px 50px 50px;
 }
 .readon.started.phone-number.cta-phone2 .btn-icon i {
-  color: #3a15fb;
+  color: #0B6258;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-color: #fff;
@@ -1477,7 +1477,7 @@ blockquote:before {
   background-color: #FFFFFF;
 }
 .readon.started.phone-number.cta-phone2:hover .btn-text {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .readon.started.phone-number.cta-phone2:hover .btn-icon i {
   border-style: solid;
@@ -1645,7 +1645,7 @@ blockquote:before {
 }
 .readon.consultant.phone-number.blue-phone1 .btn-icon i {
   background-color: #ffffff;
-  color: #3a15fb;
+  color: #0B6258;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-color: #0B6258;
@@ -1657,7 +1657,7 @@ blockquote:before {
   font-size: 20px;
 }
 .readon.consultant.phone-number.blue-phone1:hover .btn-text {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .readon.consultant.get-con {
   padding: 20px 46px;
@@ -2185,7 +2185,7 @@ blockquote:before {
   color: #0B6258;
 }
 .readon.submit.submit-green1.onepage-submit2 {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .readon.submit.submit-green1.onepage-submit3 {
   color: #b65df0;
@@ -2523,11 +2523,11 @@ blockquote:before {
   font-size: 16px;
 }
 .services-button.ser-btn5 a:hover {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .services-button.ser-btn5 a:hover i:before {
   transform: translateX(4px);
-  color: #3a15fb;
+  color: #0B6258;
 }
 .services-button.ser-btn6 a {
   color: #656567;
@@ -2539,11 +2539,11 @@ blockquote:before {
   font-size: 16px;
 }
 .services-button.ser-btn6 a:hover {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .services-button.ser-btn6 a:hover i:before {
   transform: translateX(4px);
-  color: #3a15fb;
+  color: #0B6258;
 }
 /*-- Faq Button CSS --*/
 .faq-button.faq-btn1 {
@@ -2808,7 +2808,7 @@ blockquote:before {
   font-weight: 500;
 }
 .blog-button.blog-btn7 a:hover .btn-txt {
-  color: #3a15fb !important;
+  color: #0B6258 !important;
 }
 .blog-button.blog-btn8 a {
   padding-left: 25px;
@@ -3295,7 +3295,7 @@ blockquote:before {
   font-weight: 700;
 }
 .sec-title .title.title11.blue-subnormal:before {
-  border-color: #3a15fb;
+  border-color: #0B6258;
 }
 .sec-title .title.title11.ser-details {
   font-size: 40px;
@@ -3348,10 +3348,10 @@ blockquote:before {
   border-left-width: 0;
 }
 .sec-title .title.title12.two-blue-subnormal .watermark:before {
-  border-color: #3a15fb;
+  border-color: #0B6258;
 }
 .sec-title .title.title12.two-blue-subnormal .watermark:after {
-  border-color: #3a15fb;
+  border-color: #0B6258;
 }
 .sec-title .title.title12.two-blue-subnormal.main-subnormal .watermark:before {
   border-color: #0B6258;
@@ -3367,7 +3367,7 @@ blockquote:before {
   color: #0B6258;
 }
 .sec-title .title.title13.blue-title1 span {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .sec-title .title.title14 {
   font-size: 36px;
@@ -4635,7 +4635,7 @@ blockquote:before {
   padding-right: 15px;
 }
 .full-width-header .rs-header.header-style3.header-modify2 .menu-area .main-menu .rs-menu ul.sub-menu {
-  background: #3a15fb;
+  background: #0B6258;
 }
 .full-width-header .rs-header.header-style3.header-modify2 .expand-btn-inner ul .search-btn {
   border-right: unset;
@@ -4654,7 +4654,7 @@ blockquote:before {
 .full-width-header .rs-header.header-style3.header-modify2 .expand-btn-inner ul .address-box .address-item .address-text a:hover,
 .full-width-header .rs-header.header-style3.header-modify2 .menu-area .main-menu .rs-menu ul li.current-menu-item > a:before,
 .full-width-header .rs-header.header-style3.header-modify2 .main-menu .rs-menu > ul > li.current-menu-item > a {
-  color: #3a15fb !important;
+  color: #0B6258 !important;
 }
 .full-width-header .rs-header.header-style3.header-modify2 .main-menu .rs-menu ul.sub-menu li.menu-item-has-children a:before,
 .full-width-header .rs-header.header-style3.header-modify2 .menu-area .main-menu .rs-menu ul.sub-menu li a:hover,
@@ -4689,10 +4689,10 @@ blockquote:before {
 }
 .full-width-header .rs-header.header-style3.header-modify2 .expand-btn-inner ul .address-box .address-item .address-icon i:before {
   font-size: 21px;
-  color: #3a15fb;
+  color: #0B6258;
 }
 .full-width-header .rs-header.header-style3.header-modify2 .expand-btn-inner ul .nav-link .nav-expander {
-  background: #3a15fb;
+  background: #0B6258;
 }
 .full-width-header .rs-header.header-style3.header-modify2 .expand-btn-inner ul .nav-link .nav-expander .bar span {
   background: #fff;
@@ -7231,7 +7231,7 @@ body .search-modal .close:hover {
   background-color: #1E0A26;
 }
 .rs-cta.cta-style7.cta-modify1:before {
-  background: #3a15fb;
+  background: #0B6258;
 }
 .rs-cta.cta-style8 .background-video-wrap .background-overlay {
   background-color: #164A97;
@@ -7557,7 +7557,7 @@ body .search-modal .close:hover {
 }
 .rs-counter.counter-style1.counter-modify13 .rs-counter-list .count-text .count-number .prefix,
 .rs-counter.counter-style1.counter-modify13 .rs-counter-list .count-text .count-number .rs-count {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-counter.counter-style1.counter-modify14 .counter-wrap {
   background-color: #F6F9FE;
@@ -8597,13 +8597,13 @@ body .search-modal .close:hover {
   color: #0B6258;
 }
 .rs-contact.contact-style6.contact-modify7 .address-boxs .address-icon {
-  background-color: #3a15fb;
+  background-color: #0B6258;
 }
 .rs-contact.contact-style6.contact-modify7 .contact-wrap {
-  background-color: #3a15fb;
+  background-color: #0B6258;
 }
 .rs-contact.contact-style6.contact-modify7 .contact-wrap .wpcf7-form-control-wrap:hover i {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-contact.contact-style6.contact-modify8 .address-boxs .address-icon {
   background-color: #b65df0;
@@ -9135,13 +9135,13 @@ body .search-modal .close:hover {
   left: 25%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background: #3a15fb;
+  background: #0B6258;
 }
 .rs-videos.video-style2.woman-video1 .animate-border2 .popup-border:before {
-  border: 2px solid #3a15fb;
+  border: 2px solid #0B6258;
 }
 .rs-videos.video-style2.woman-video1 .animate-border2 .popup-border:after {
-  border: 2px solid #3a15fb;
+  border: 2px solid #0B6258;
 }
 .rs-videos.video-style2.woman-video1 .divider-separator {
   padding: 160px 250px 130px 150px;
@@ -10026,7 +10026,7 @@ body .search-modal .close:hover {
   color: #000;
 }
 .rs-services.services-style7 .services-item .services-wrap .services-content .title a:hover {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-services.services-style7 .services-item .services-wrap .services-content .services-txt {
   font-size: 18px;
@@ -10050,7 +10050,7 @@ body .search-modal .close:hover {
 }
 .rs-services.services-style7 .services-item .services-wrap:hover .services-button.ser-btn5 a i:before,
 .rs-services.services-style7 .services-item .services-wrap:hover .services-button.ser-btn5 a {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-services.services-style8 .services-item {
   position: relative;
@@ -12734,7 +12734,7 @@ body .search-modal .close:hover {
 .rs-project.project-style9 .slider .slick-arrow {
   position: absolute;
   bottom: 0;
-  border: 1px solid #3a15fb;
+  border: 1px solid #0B6258;
   background-color: transparent;
   width: 50px;
   height: 50px;
@@ -12750,7 +12750,7 @@ body .search-modal .close:hover {
 }
 .rs-project.project-style9 .slider .slick-arrow.slick-next:before {
   font-size: 23px;
-  color: #3a15fb;
+  color: #0B6258;
   margin: 0;
   font-family: remixicon;
   content: "\ea6c";
@@ -12763,13 +12763,13 @@ body .search-modal .close:hover {
 .rs-project.project-style9 .slider .slick-arrow.slick-prev:before {
   content: "\ea60";
   font-size: 23px;
-  color: #3a15fb;
+  color: #0B6258;
   margin: 0;
   font-family: remixicon;
   text-align: center;
 }
 .rs-project.project-style9 .slider .slick-arrow:hover {
-  background: #3a15fb;
+  background: #0B6258;
 }
 .rs-project.project-style9 .slider .slick-arrow:hover.slick-next:before,
 .rs-project.project-style9 .slider .slick-arrow:hover.slick-prev:before {
@@ -13678,7 +13678,7 @@ body .search-modal .close:hover {
   color: #000;
 }
 .rs-blog.blog-style3 .slider .blog-item .blog-inner-wrap .blog-content .blog-title a:hover {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-blog.blog-style3 .slider .blog-item .blog-inner-wrap:hover .image-wrap a img {
   filter: grayscale(100%);
@@ -13690,7 +13690,7 @@ body .search-modal .close:hover {
 .rs-blog.blog-style3 .slider .slick-arrow {
   position: absolute;
   bottom: 0;
-  border: 1px solid #3a15fb;
+  border: 1px solid #0B6258;
   background-color: transparent;
   width: 50px;
   height: 50px;
@@ -13706,7 +13706,7 @@ body .search-modal .close:hover {
 }
 .rs-blog.blog-style3 .slider .slick-arrow.slick-next:before {
   font-size: 23px;
-  color: #3a15fb;
+  color: #0B6258;
   margin: 0;
   font-family: remixicon;
   content: "\ea6c";
@@ -13719,13 +13719,13 @@ body .search-modal .close:hover {
 .rs-blog.blog-style3 .slider .slick-arrow.slick-prev:before {
   content: "\ea60";
   font-size: 23px;
-  color: #3a15fb;
+  color: #0B6258;
   margin: 0;
   font-family: remixicon;
   text-align: center;
 }
 .rs-blog.blog-style3 .slider .slick-arrow:hover {
-  background: #3a15fb;
+  background: #0B6258;
 }
 .rs-blog.blog-style3 .slider .slick-arrow:hover.slick-next:before,
 .rs-blog.blog-style3 .slider .slick-arrow:hover.slick-prev:before {
@@ -16581,13 +16581,13 @@ body .search-modal .close:hover {
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-bottom .bottom-border .copy-right-menu li a:hover,
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-bottom .bottom-border .copyright p a:hover,
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-top .site-map li a:hover {
-  color: #3a15fb;
+  color: #0B6258;
 }
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-bottom .bottom-border .copy-right-menu li:before,
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-top .footer-social li a i:hover,
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .newsletter-wrap input[type="submit"],
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-top .site-map li a:before {
-  background-color: #3a15fb;
+  background-color: #0B6258;
 }
 .rs-footer.footer-main-home.footer-modify1.footer-blue-style1 .footer-bottom {
   background-color: #1A001B;
